[package]
authors = ["Samuel Jones"]
about = "hellworld is a blazing fast implementation of \"Hello, World!\", written in only 101 LOC"
name = "hellworld"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
log = "0.4.17"
serde = { version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
simple_logger = "2.2.0"
